--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Photos</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
@@ -102,7 +102,7 @@
     <!-- Portfolio Grid Section -->
     <section class="portfolio" id="portfolio">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+          <h2 class="text-center text-uppercase text-secondary mb-0">Photos</h2>
         <hr class="star-dark mb-5">
         <div class="row">
           <div class="col-md-6 col-lg-4">
@@ -312,13 +312,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Dicken vs Cocks</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">SM-Liigan vuosi 2018 on nyt paketissa, ja vuoden viimeiset pisteet matkasivat lauttasaareen, kun Dicken voitti PIF:n näytöstyyliin lukemin 15-35. Lauttasaarelaiset saivat otteluun lentävän lähdön, kun nopeassa tahdissa mentiin jo 7-2 johtoon, ja eroa kasvatettiin tasaiseen tahtiin aina tauolle asti, jota vietettiin lukemissa 9-16.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close Photo</a>
             </div>
           </div>
         </div>
@@ -334,13 +334,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Dicken vs Cocks</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">SM-Liigan vuosi 2018 on nyt paketissa, ja vuoden viimeiset pisteet matkasivat lauttasaareen, kun Dicken voitti PIF:n näytöstyyliin lukemin 15-35. Lauttasaarelaiset saivat otteluun lentävän lähdön, kun nopeassa tahdissa mentiin jo 7-2 johtoon, ja eroa kasvatettiin tasaiseen tahtiin aina tauolle asti, jota vietettiin lukemissa 9-16.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close Photo</a>
             </div>
           </div>
         </div>
@@ -356,13 +356,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Dicken vs Cocks</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">SM-Liigan vuosi 2018 on nyt paketissa, ja vuoden viimeiset pisteet matkasivat lauttasaareen, kun Dicken voitti PIF:n näytöstyyliin lukemin 15-35. Lauttasaarelaiset saivat otteluun lentävän lähdön, kun nopeassa tahdissa mentiin jo 7-2 johtoon, ja eroa kasvatettiin tasaiseen tahtiin aina tauolle asti, jota vietettiin lukemissa 9-16.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close Photo</a>
             </div>
           </div>
         </div>
@@ -378,13 +378,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Dicken vs Cocks</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">SM-Liigan vuosi 2018 on nyt paketissa, ja vuoden viimeiset pisteet matkasivat lauttasaareen, kun Dicken voitti PIF:n näytöstyyliin lukemin 15-35. Lauttasaarelaiset saivat otteluun lentävän lähdön, kun nopeassa tahdissa mentiin jo 7-2 johtoon, ja eroa kasvatettiin tasaiseen tahtiin aina tauolle asti, jota vietettiin lukemissa 9-16.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close Photo</a>
             </div>
           </div>
         </div>
@@ -400,13 +400,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Dicken vs Cocks</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">SM-Liigan vuosi 2018 on nyt paketissa, ja vuoden viimeiset pisteet matkasivat lauttasaareen, kun Dicken voitti PIF:n näytöstyyliin lukemin 15-35. Lauttasaarelaiset saivat otteluun lentävän lähdön, kun nopeassa tahdissa mentiin jo 7-2 johtoon, ja eroa kasvatettiin tasaiseen tahtiin aina tauolle asti, jota vietettiin lukemissa 9-16.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close Photo</a>
             </div>
           </div>
         </div>
@@ -422,13 +422,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Dicken vs Cocks</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">SM-Liigan vuosi 2018 on nyt paketissa, ja vuoden viimeiset pisteet matkasivat lauttasaareen, kun Dicken voitti PIF:n näytöstyyliin lukemin 15-35. Lauttasaarelaiset saivat otteluun lentävän lähdön, kun nopeassa tahdissa mentiin jo 7-2 johtoon, ja eroa kasvatettiin tasaiseen tahtiin aina tauolle asti, jota vietettiin lukemissa 9-16.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close Photo</a>
             </div>
           </div>
         </div>
